--- a/app/views/index.html
+++ b/app/views/index.html
@@ -16,30 +16,33 @@
       Usability improvements to the services list page, adding a new service and the dashboard.
       </p>
 
-      <p>Updated: 20 August 2020</p>
+      <p>Updated: 27 August 2020</p>
 
-        <div class="user-research">
+      <h2 class="govuk-heading-m">[build] pages</h2>
+      <ol class="govuk-list govuk-list--number">
+        <li><a href="build-services-list">Services list page</a></li>
+      </ol>
 
-      <h2 class="govuk-heading-m">User research &mdash; 21 August 2020</h2>
-        <ol class="govuk-list govuk-list--number">
-          <li><span class="strong">Department running everything through 1 service </span></br>
-             <a href="one-services-list">Services list page</a>,
-                <a href="invoices">Dashboard</a></li>
-                <!--
-          <li>Local authority with just one service</li>
-          <li>Lots of services (could be central or local)  (<a href="many-services-list">here</a>)</li>
-          -->
-          </ol>
-
-          </div>
-
-      <h2 class="govuk-heading-m">Working pages</h2>
+      <h2 class="govuk-heading-m">[experimental] pages <a href="https://www.figma.com/file/cNdZ8GCt6ISHr1cqjdha4f/Pay-flows?node-id=678%3A0">figma link</a></h2>
       <ol class="govuk-list govuk-list--number">
         <li><a href="services-list">Services list page (4 services)</a></li>
         <li><a href="manage-service-settings">Manage service settings</a></li>
         <li><a href="fishing-licence">Dashboard for a service (first time use)</a></li>
       </ol>
 
+      <div class="user-research">
+    <h2 class="govuk-heading-m">User research &mdash; 21 August 2020</h2>
+      <ol class="govuk-list govuk-list--number">
+        <li><span class="strong">Department running everything through 1 service </span></br>
+           <a href="one-services-list">Services list page</a>,
+              <a href="invoices">Dashboard</a></li>
+              <!--
+        <li>Local authority with just one service</li>
+        <li>Lots of services (could be central or local)  (<a href="many-services-list">here</a>)</li>
+        -->
+        </ol>
+
+        </div>
 
 
       <h2 class="govuk-heading-m">Draft scenarios</h2>
@@ -51,11 +54,8 @@
         <li><a href="fishing-licence">Dashboard for a service (first time use)</a></li>
         <li><a href="#">Dashboard for a service (regular use)</a></li>
 
-        </ol>
-      <p>We recommend you add links to your prototype to this page, rather than delete it.
-        You'll find this page in the kit at '/app/views/index.html'.</p>
 
-      <p>You can change the service name by editing the file '/app/config.js'.</p>
+
 
       <h2 class="govuk-heading-m">Examples and documentation</h2>
 
