--- a/app/views/manage-service-settings.html
+++ b/app/views/manage-service-settings.html
@@ -42,8 +42,8 @@
           </a>
         </li>
         <li class="govuk-tabs__list-item">
-          <a class="govuk-tabs__tab" href="#delete">
-            Delete or archive service
+          <a class="govuk-tabs__tab" href="#archive">
+            Archive service
           </a>
         </li>
       </ul>
@@ -94,9 +94,12 @@
         <p class="govuk-body-m">Payment card schemes require the details of the organisation taking payment to be shown on payment pages.</p>
       </div>
 
-      <div class="govuk-tabs__panel govuk-tabs__panel--hidden" id="delete">
-        <h2 class="govuk-heading-m">Delete or archive service</h2>
-        <p class="govuk-body-m">...</p>
+      <div class="govuk-tabs__panel govuk-tabs__panel--hidden" id="archive">
+        <h2 class="govuk-heading-m">Archive service</h2>
+        <p class="govuk-body-m">This will revoke the API keys and disable the service.</p>
+        <button class="govuk-button" data-module="govuk-button">
+          Archive service
+        </button>
       </div>
 
       </div>
