--- a/app/views/one-services-list.html
+++ b/app/views/one-services-list.html
@@ -12,15 +12,15 @@
       <h2 class="govuk-heading-l">
         You have 2 services
       </h2>
-      <button class="govuk-button" data-module="govuk-button">
-  Add a new service
-  </button>
             <p class="govuk-body-s">
             <a href="#">View transactions for all live services</a></p>
                   <p class="govuk-body-s">
             <a href="#">View payments to your bank account</a>
             </p>
 
+            <p class="govuk-body-s">
+          <a href="#">Add a new service</a>
+          </p>
 
 <div class="search-controls">
   <div class="filter-services-block">
@@ -31,6 +31,7 @@
   </div>
 
 
+<!--
   <div class="sortblockcontainer">
   <div class="sortblock">
 
@@ -47,7 +48,7 @@
   </div>
   </div>
   </div>
-
+-->
 </div>
 
 
@@ -64,33 +65,34 @@
         <div class="govuk-grid-row">
           <div class="govuk-grid-column-two-thirds-from-desktop">
             <div class="live-icon"></div>
-            <h2 class="govuk-heading-s">Invoices &nbsp; <span class="govuk-body-s"><a href="manage-service-settings">Manage</a></span></h2>
+            <h2 class="govuk-heading-m">Invoices &nbsp; <span class="govuk-body-s"><a href="manage-service-settings">Manage</a></span></h2>
       </div>
 
 
         <div class="net-income-summary-container">
           <p class="govuk-!-font-size-14">
-            Net income
+          &nbsp;
           </p>
+          <!--
           <div class="net-income-summary">
             <p class="govuk-!-font-size-16">
               £450.00
               </p>
             </div>
+          -->
+
         </div>
   </div>
 
   <div class="govuk-grid-column-one-third-from-desktop">
       <div class="service-links">
         <p class="govuk-heading-s">
-          <a href="fishing-licence">Live Stripe dashboard</a></br>
-          <span class="govuk-body-s"><a href="#">Test dashboard</a></p>
+          <a href="fishing-licence">Live dashboard</a><span class="dash-stripe govuk-body-s">stripe</span></br>
+        <!--  <span class="govuk-body-s"><a href="#">Test dashboard</a></p>-->
           </div>
         </div>
   </div>
 </div>
-
-
 
 
 
@@ -99,34 +101,36 @@
         <div class="govuk-grid-row">
           <div class="govuk-grid-column-two-thirds-from-desktop">
             <div class="test-icon"></div>
-            <h2 class="govuk-heading-s">Testing a service  &nbsp; <span class="govuk-body-s"><a href="manage-service-settings">Manage</a></span></h2>
+            <h2 class="govuk-heading-m">Test service &nbsp; <span class="govuk-body-s"><a href="manage-service-settings">Manage</a></span></h2>
       </div>
 
 
         <div class="net-income-summary-container">
-            <p class="govuk-body-s"><a href="#">Request to go live</p>
-          <!--
           <p class="govuk-!-font-size-14">
-            Net income (Live)
+          &nbsp;
           </p>
+          <!--
           <div class="net-income-summary">
             <p class="govuk-!-font-size-16">
               £450.00
               </p>
-              -->
+            </div>
+          -->
 
         </div>
   </div>
-
 
   <div class="govuk-grid-column-one-third-from-desktop">
       <div class="service-links">
         <p class="govuk-body-s">
-            </br><a href="#">Test dashboard</a></p>
+          <a href="fishing-licence">
+       <a href="#">Test dashboard</a></p>
           </div>
         </div>
   </div>
 </div>
+
+
 
 <div class="service-archive">
   <p class="govuk-body-m"><a href="#">View archived services</a>
