--- a/app/views/services-list.html
+++ b/app/views/services-list.html
@@ -12,15 +12,15 @@
       <h2 class="govuk-heading-l">
         You have 4 services
       </h2>
-      <button class="govuk-button" data-module="govuk-button">
-  Add a new service
-  </button>
             <p class="govuk-body-s">
             <a href="#">View transactions for all live services</a></p>
                   <p class="govuk-body-s">
             <a href="#">View payments to your bank account</a>
             </p>
 
+            <p class="govuk-body-s">
+          <a href="#">Add a new service</a>
+          </p>
 
 <div class="search-controls">
   <div class="filter-services-block">
@@ -31,6 +31,7 @@
   </div>
 
 
+<!--
   <div class="sortblockcontainer">
   <div class="sortblock">
 
@@ -47,7 +48,7 @@
   </div>
   </div>
   </div>
-
+-->
 </div>
 
 
@@ -70,21 +71,24 @@
 
         <div class="net-income-summary-container">
           <p class="govuk-!-font-size-14">
-            Net income
+          &nbsp;
           </p>
+          <!--
           <div class="net-income-summary">
             <p class="govuk-!-font-size-16">
               £450.00
               </p>
             </div>
+          -->
+
         </div>
   </div>
 
   <div class="govuk-grid-column-one-third-from-desktop">
       <div class="service-links">
         <p class="govuk-heading-s">
-          <a href="fishing-licence">Live Stripe dashboard</a></br>
-          <span class="govuk-body-s"><a href="#">Test dashboard</a></p>
+          <a href="fishing-licence">Live dashboard</a><span class="dash-stripe govuk-body-s">stripe</span></br>
+        <!--  <span class="govuk-body-s"><a href="#">Test dashboard</a></p>-->
           </div>
         </div>
   </div>
@@ -102,21 +106,24 @@
 
         <div class="net-income-summary-container">
           <p class="govuk-!-font-size-14">
-            Net income (Live)
+        &nbsp;
           </p>
+          <!--
           <div class="net-income-summary">
             <p class="govuk-!-font-size-16">
               £450.00
               </p>
             </div>
+              -->
         </div>
   </div>
 
   <div class="govuk-grid-column-one-third-from-desktop">
       <div class="service-links">
         <p class="govuk-heading-s">
-          <a href="fishing-licence">Live WorldPay dashboard</a></br>
-          <span class="govuk-body-s"><a href="#">Test dashboard</a></p>
+          <a href="fishing-licence">Live dashboard</a> <span class="dash-worldpay govuk-body-s">worldpay</span></br>
+          <!--<span class="govuk-body-s"><a href="#">Test dashboard</a></p>-->
+
           </div>
         </div>
   </div>
@@ -152,7 +159,7 @@
   <div class="govuk-grid-column-one-third-from-desktop">
       <div class="service-links">
         <p class="govuk-body-s">
-            </br><a href="#">Test dashboard</a></p>
+          <a href="#">Test dashboard</a></p>
           </div>
         </div>
   </div>
@@ -186,7 +193,8 @@
   <div class="govuk-grid-column-one-third-from-desktop">
       <div class="service-links">
         <p class="govuk-body-s">
-            </br><a href="#">Test dashboard</a></p>
+            <a href="#">Test dashboard</a>
+          </p>
           </div>
         </div>
   </div>
