--- a/app/views/build-services-list.html
+++ b/app/views/build-services-list.html
@@ -12,7 +12,7 @@
       <h2 class="govuk-heading-l">
         You have 3 services
       </h2>
-      <p>You're logged in as apple.davies@surrey.gov.uk <a href="#">Sign out</a></p>
+      <p>You're signed in as apple.davies@surrey.gov.uk <a href="#">Sign out</a></p>
 
             <p class="govuk-body-s">
             <a href="#">View transactions for all live services</a></p>
