--- a/app/assets/sass/application.scss
+++ b/app/assets/sass/application.scss
@@ -267,7 +267,7 @@ margin-bottom: 50px;}
   margin-right: 15px;
   float: right;
   width: 245px;
-  text-align: right;
+  text-align: left;
 }
 
 .net-income-summary-container p {
@@ -358,6 +358,6 @@ margin-bottom: 50px;}
 }
 
 .add-a-service {
-text-align: right;
+text-align: left;
 margin-bottom: 20px;
 }
