--- a/app/views/build-services-list.html
+++ b/app/views/build-services-list.html
@@ -13,6 +13,9 @@
         You have 3 services
       </h2>
       <p>You're signed in as apple.davies@surrey.gov.uk <a href="#">Sign out</a></p>
+      <!--
+    <p>You can access 2 services and can administrate 1 service.</p>
+    -->
 
             <p class="govuk-body-s">
             <a href="#">View transactions for all live services</a></p>
@@ -139,9 +142,11 @@
       </div>
 
 
+<!--
 <div class="service-archive">
   <p class="govuk-body-m"><a href="#">View archived services</a>
 </div>
+-->
 
 
 
