--- a/app/views/build-services-list.html
+++ b/app/views/build-services-list.html
@@ -7,21 +7,36 @@
 
 {% block content %}
 
+<div class="nav-level-2">
+      <div class="nav-level-2-item nav-selected">
+            <p>
+              <a href="#">All services</a>
+              </p>
+            </div>
+
+            <div class="nav-level-2-item">
+              <p>
+              <a href="#">All live transactions</a>
+              </p>
+            </div>
+
+              <div class="nav-level-2-item">
+                <p>
+                <a href="#">All bank payments</a>
+              </p>
+              </div>
+            </div>
+
   <div class="govuk-grid-row">
     <div class="govuk-grid-column-two-thirds">
       <h2 class="govuk-heading-l">
-        You have 3 services
+        All services (3)
       </h2>
       <p>You're signed in as apple.davies@surrey.gov.uk <a href="#">Sign out</a></p>
       <!--
     <p>You can access 2 services and can administrate 1 service.</p>
     -->
 
-            <p class="govuk-body-s">
-            <a href="#">View transactions for all live services</a></p>
-                  <p class="govuk-body-s">
-            <a href="#">View payments to your bank account</a>
-            </p>
 
 
 
