--- a/app/views/index.html
+++ b/app/views/index.html
@@ -20,7 +20,8 @@
 
       <h2 class="govuk-heading-m">[build] pages</h2>
       <ol class="govuk-list govuk-list--number">
-        <li><a href="build-services-list">Services list page</a></li>
+        <li><a href="build-services-list">Services list page</a> – navigation style 1</li>
+        <li><a href="build-services-list-2">Services list page</a> – navigation style 2</li>
       </ol>
 
       <h2 class="govuk-heading-m">[experimental] pages <a href="https://www.figma.com/file/cNdZ8GCt6ISHr1cqjdha4f/Pay-flows?node-id=678%3A0">figma link</a></h2>
