--- a/app/views/build-services-list-2.html
+++ b/app/views/build-services-list-2.html
@@ -16,7 +16,7 @@
     <span class="navlink link-selected">
     <a href="fishing-licence">All services (3)</a>
     </span>
-    <span class="navlink"> <a href="transactions">All live transactions</a></span>
+    <span class="navlink"> <a href="#">All live transactions</a></span>
     <span class="navlink">
    <a href="#">All bank payments</a>
    </span>
