--- a/app/views/build-services-list-2.html
+++ b/app/views/build-services-list-2.html
@@ -9,7 +9,7 @@
 
 <div class="nav-block">
   <div class="service-title">
-  <h3 class="govuk-body-m">apple.davies@surrey.gov.uk (<a href="#">sign out</a>)
+  <h3 class="govuk-body-m">apple.davies@surrey.gov.uk 
   </div>
   <div class="navigation-links">
   <p class="govuk-body-s">
