--- a/app/assets/sass/application.scss
+++ b/app/assets/sass/application.scss
@@ -374,6 +374,7 @@ margin-bottom: 20px;
 .nav-level-2-item  a, a:active, a:visited {
   font-weight: bold;
   text-decoration: none !important;
+  font-size: 100%;
 }
 
 .nav-level-2-item  a:hover {
