--- a/app/assets/sass/application.scss
+++ b/app/assets/sass/application.scss
@@ -102,6 +102,11 @@ $govuk-assets-path: '/govuk/assets/';
   text-align: center;
 }
 
+.navigation-links-2 {
+  float: left;
+  text-align: center;
+}
+
 .navlink {
   margin-right: 20px;
 }
