--- a/app/views/build-services-list-2.html
+++ b/app/views/build-services-list-2.html
@@ -8,10 +8,12 @@
 {% block content %}
 
 <div class="nav-block">
+  <!--
   <div class="service-title">
-  <h3 class="govuk-body-m">apple.davies@surrey.gov.uk 
+  <h3 class="govuk-body-m">apple.davies@surrey.gov.uk
   </div>
-  <div class="navigation-links">
+  -->
+  <div class="navigation-links-2">
   <p class="govuk-body-s">
     <span class="navlink link-selected">
     <a href="fishing-licence">All services (3)</a>
