content change: ALL SERVICES to MY SERVICES

--- a/app/views/build-services-list-2.html
+++ b/app/views/build-services-list-2.html
@@ -16,11 +16,11 @@
   <div class="navigation-links-2">
   <p class="govuk-body-s">
     <span class="navlink link-selected">
-    <a href="fishing-licence">All services (3)</a>
+    <a href="fishing-licence">My services (3)</a>
     </span>
-    <span class="navlink"> <a href="#">All live transactions</a></span>
+    <span class="navlink"> <a href="#">My live transactions</a></span>
     <span class="navlink">
-   <a href="#">All bank payments</a>
+   <a href="#">My bank payments</a>
    </span>
 
   </div>
@@ -30,7 +30,7 @@
   <div class="govuk-grid-row">
     <div class="govuk-grid-column-two-thirds">
       <h2 class="govuk-heading-l">
-        All services (3)
+        My services (3)
       </h2>
       <!--
     <p>You can access 2 services and can administrate 1 service.</p>
