--- a/app/assets/sass/application.scss
+++ b/app/assets/sass/application.scss
@@ -134,6 +134,7 @@ $govuk-assets-path: '/govuk/assets/';
 .link-selected {
   border-bottom: 4px solid black;
   padding-bottom: 18px;
+  font-weight: bold;
 }
 
 
