--- a/app/views/layout.html
+++ b/app/views/layout.html
@@ -49,12 +49,12 @@
     navigation: [
       {
         href: "#1",
-        text: "My services",
+        text: "Services",
         active: true
       },
       {
         href: "#2",
-        text: "My profile"
+        text: "Profile"
       },
       {
         href: "#3",
