--- a/app/views/build-services-list-2.html
+++ b/app/views/build-services-list-2.html
@@ -16,11 +16,11 @@
   <div class="navigation-links-2">
   <p class="govuk-body-s">
     <span class="navlink link-selected">
-    <a href="fishing-licence">My services (3)</a>
+    <a href="fishing-licence">Services (3)</a>
     </span>
-    <span class="navlink"> <a href="#">My live transactions</a></span>
+    <span class="navlink"> <a href="#">All live transactions</a></span>
     <span class="navlink">
-   <a href="#">My bank payments</a>
+   <a href="#">All bank payments</a>
    </span>
 
   </div>
@@ -30,7 +30,7 @@
   <div class="govuk-grid-row">
     <div class="govuk-grid-column-two-thirds">
       <h2 class="govuk-heading-l">
-        My services (3)
+        Service dashboards (3)
       </h2>
       <!--
     <p>You can access 2 services and can administrate 1 service.</p>
@@ -95,8 +95,8 @@
   <div class="govuk-grid-column-one-third-from-desktop">
       <div class="service-links-1">
         <p class="govuk-heading-s">
-          <a href="fishing-licence">Live dashboard</a><!---<span class="dash-stripe govuk-body-s">stripe</span></br>-->
-        </br> <span class="govuk-body-s"><a href="#">Test dashboard</a></p>
+          <a href="fishing-licence">Live account</a><!---<span class="dash-stripe govuk-body-s">stripe</span></br>-->
+        </br> <span class="govuk-body-s"><a href="#">Test account</a></p>
           </div>
         </div>
       </div>
@@ -121,8 +121,8 @@
     <div class="govuk-grid-column-one-third-from-desktop">
         <div class="service-links-1">
           <p class="govuk-heading-s">
-            <a href="fishing-licence">Live dashboard</a><!---<span class="dash-stripe govuk-body-s">stripe</span></br>-->
-          </br> <span class="govuk-body-s"><a href="#">Test dashboard</a></p>
+            <a href="fishing-licence">Live account</a><!---<span class="dash-stripe govuk-body-s">stripe</span></br>-->
+          </br> <span class="govuk-body-s"><a href="#">Test account</a></p>
             </div>
           </div>
         </div>
@@ -149,7 +149,7 @@
       <div class="govuk-grid-column-one-third-from-desktop">
           <div class="service-links-1">
             <p class="govuk-body-s">
-              <a href="fishing-licence"><a href="#">Test dashboard</a></p>
+              <a href="fishing-licence"><a href="#">Test account</a></p>
               </div>
             </div>
           </div>
