--- a/app/views/build-services-list-2.html
+++ b/app/views/build-services-list-2.html
@@ -15,7 +15,7 @@
   -->
   <div class="navigation-links-2">
   <p class="govuk-body-s">
-    <span class="navlink link-selected">
+    <span class="navlink link-selected-2">
     <a href="fishing-licence">Services (3)</a>
     </span>
     <span class="navlink"> <a href="#">All live transactions</a></span>
@@ -29,12 +29,11 @@
 
   <div class="govuk-grid-row">
     <div class="govuk-grid-column-two-thirds">
-      <h2 class="govuk-heading-l">
-        Service dashboards (3)
-      </h2>
       <!--
-    <p>You can access 2 services and can administrate 1 service.</p>
-    -->
+      <h2 class="govuk-heading-l">
+        Services (3)
+      </h2>
+      -->
 
 
 
@@ -76,92 +75,102 @@
 </p>
 </div>
 
+<div class="service-in-list-2">
+  <h2 class="govuk-heading-m">Fishing licence &nbsp; <span class="govuk-body-s"><a href="#">Edit name</a></span></h2>
+<div class="service-left">
+  <div class="live-icon"></div>
+  <p class="govuk-heading-s"><a href="fishing-licence">Live account</a></p>
+  </div>
+  <div class="service-right">
+    <p class="govuk-body-s"><a href="#">Manage team members</a></p>
+    <p class="govuk-body-s"><a href="#">Manage organisation details</a></p>
+    <p class="govuk-body-s"><a href="#">View test account</a></p>
+  </div>
+  </div>
 
+<div class="service-in-list-2">
+  <h2 class="govuk-heading-m">Bin bags &nbsp; <span class="govuk-body-s"><a href="#">Edit name</a></span></h2>
+<div class="service-left">
+  <div class="live-icon"></div>
+  <p class="govuk-heading-s"><a href="fishing-licence">Live account</a></p>
+  </div>
+  <div class="service-right">
+    <p class="govuk-body-s"><a href="#">Manage team members</a></p>
+    <p class="govuk-body-s"><a href="#">Manage organisation details</a></p>
+    <p class="govuk-body-s"><a href="#">View test account</a></p>
+    </div>
+
+  </div>
+
+  <div class="service-in-list-2">
+    <h2 class="govuk-heading-m">Garden waste &nbsp; <span class="govuk-body-s"><a href="#">Edit name</a></span></h2>
+  <div class="service-left">
+    <div class="live-icon"></div>
+    <p class="govuk-heading-s"><a href="fishing-licence">Live account</a></p>
+    </div>
+    <div class="service-right">
+      <p class="govuk-body-s"><a href="#">Manage team members</a></p>
+      <p class="govuk-body-s"><a href="#">Manage organisation details</a></p>
+      <p class="govuk-body-s"><a href="#">View test account</a></p>
+    </div>
+    </div>
+
+    <div class="service-in-list-2">
+      <h2 class="govuk-heading-m">Bulky waste collection &nbsp; <span class="govuk-body-s"><a href="#">Edit name</a></span></h2>
+    <div class="service-left">
+      <div class="test-icon"></div>
+      <p class="govuk-heading-s test-account-link"><a href="#">Test account</a></p>
+      </div>
+      <div class="service-right">
+        <p class="govuk-body-s"><a href="#">Manage team members</a></p>
+        <p class="govuk-body-s"><a href="#">Manage organisation details</a></p>
+      </div>
+      </div>
+
+      <div class="service-in-list-2">
+        <h2 class="govuk-heading-m">Parking permit &nbsp; <span class="govuk-body-s"><a href="#">Edit name</a></span></h2>
+      <div class="service-left">
+        <div class="test-icon"></div>
+        <p class="govuk-heading-s test-account-link"><a href="#">Test account</a></p>
+        </div>
+        <div class="service-right">
+          <p class="govuk-body-s"><a href="#">Manage team members</a></p>
+          <p class="govuk-body-s"><a href="#">Manage organisation details</a></p>
+        </div>
+        </div>
+
+<!--
 <div class="service-in-list">
-      <div class="division-header">
-        <div class="govuk-grid-row">
-          <div class="govuk-grid-column-two-thirds-from-desktop">
-            <div class="live-icon"></div>
             <h2 class="govuk-heading-m">Fishing licence &nbsp; <span class="govuk-body-s"><a href="#">Edit name</a></span></h2>
           </div>
-        <div class="service-links-2">
+        <div class="service-right">
           <p class="govuk-!-font-size-16">
-        <a href="#">Manage team members</a></br>
+        <a href="#">Manage team members</a></p>
+        <p class="govuk-!-font-size-16">
         <a href="#">Manage organisation details</a>
           </p>
         </div>
       </div>
 
   <div class="govuk-grid-column-one-third-from-desktop">
-      <div class="service-links-1">
+      <div class="service-left">
         <p class="govuk-heading-s">
-          <a href="fishing-licence">Live account</a><!---<span class="dash-stripe govuk-body-s">stripe</span></br>-->
-        </br> <span class="govuk-body-s"><a href="#">Test account</a></p>
+          <a href="fishing-licence">Live account</a></p>
+         <p class="govuk-body-s"><a href="#">Test account</a></p>
           </div>
         </div>
       </div>
   </div>
-
-
-  <div class="service-in-list">
-        <div class="division-header">
-          <div class="govuk-grid-row">
-            <div class="govuk-grid-column-two-thirds-from-desktop">
-              <div class="live-icon"></div>
-              <h2 class="govuk-heading-m">Parking permit &nbsp; <span class="govuk-body-s"><a href="#">Edit name</a></span></h2>
-            </div>
-          <div class="service-links-2">
-            <p class="govuk-!-font-size-16">
-          <a href="#">Manage team members</a></br>
-          <a href="#">Manage organisation details</a>
-            </p>
-          </div>
-        </div>
-
-    <div class="govuk-grid-column-one-third-from-desktop">
-        <div class="service-links-1">
-          <p class="govuk-heading-s">
-            <a href="fishing-licence">Live account</a><!---<span class="dash-stripe govuk-body-s">stripe</span></br>-->
-          </br> <span class="govuk-body-s"><a href="#">Test account</a></p>
-            </div>
-          </div>
-        </div>
-    </div>
-
-
-
-
-    <div class="service-in-list">
-          <div class="division-header">
-            <div class="govuk-grid-row">
-              <div class="govuk-grid-column-two-thirds-from-desktop">
-                <div class="test-icon"></div>
-                <h2 class="govuk-heading-m">Testing a service &nbsp; <span class="govuk-body-s"><a href="#">Edit name</a></span></h2>
-              </div>
-            <div class="service-links-2">
-              <p class="govuk-!-font-size-16">
-            <a href="#">Manage team members</a></br>
-            <a href="#">Manage organisation details</a>
-              </p>
-            </div>
-          </div>
-
-      <div class="govuk-grid-column-one-third-from-desktop">
-          <div class="service-links-1">
-            <p class="govuk-body-s">
-              <a href="fishing-licence"><a href="#">Test account</a></p>
-              </div>
-            </div>
-          </div>
-      </div>
+  -->
 
 
 <!--
+
 <div class="service-archive">
   <p class="govuk-body-m"><a href="#">View archived services</a>
 </div>
--->
 
+-->
 
 
 {% endblock %}
