--- a/app/views/index.html
+++ b/app/views/index.html
@@ -16,12 +16,11 @@
       Usability improvements to the services list page, adding a new service and the dashboard.
       </p>
 
-      <p>Updated: 14 September 2020</p>
+      <p>Updated: 17 September 2020</p>
 
       <h2 class="govuk-heading-m">[build] pages</h2>
       <ol class="govuk-list govuk-list--number">
-        <li><a href="build-services-list">Services list page</a> – navigation style 1</li>
-        <li><a href="build-services-list-2">Services list page</a> – navigation style 2</li>
+        <li><a href="build-services-list-2">Services list page</a></li>
       </ol>
 
       <h2 class="govuk-heading-m">[experimental] pages <a href="https://www.figma.com/file/cNdZ8GCt6ISHr1cqjdha4f/Pay-flows?node-id=678%3A0">figma link</a></h2>
