--- a/app/assets/sass/application.scss
+++ b/app/assets/sass/application.scss
@@ -28,6 +28,22 @@ $govuk-assets-path: '/govuk/assets/';
   margin-bottom: 25px;
 }
 
+.test-account-link {
+}
+
+.live-icon-2 {
+	display: block;
+  float: left;
+	position: absolute;
+	top: 0;
+	left: 0;
+	width: 20px;
+	height: 20px;
+	border: 1px solid govuk-colour("green");
+  background-color: govuk-colour("green");
+	border-radius: 50%;
+}
+
 .live-icon {
 	display: block;
   float: left;
@@ -131,12 +147,18 @@ $govuk-assets-path: '/govuk/assets/';
   margin-bottom: 5px;
 }
 
-.link-selected {
+.link-selected-2 {
   border-bottom: 4px solid black;
   padding-bottom: 18px;
   font-weight: bold;
 }
 
+.link-selected-2 {
+  border-bottom: 4px solid black;
+  padding-bottom: 18px;
+  font-weight: bold;
+  font-size: 105%;
+}
 
 .service-title {
 float: left;
@@ -256,9 +278,38 @@ margin-bottom: 50px;}
   width: 145px;
 }
 
+.service-container {
+display: inline-block;
+}
+
+// cleanup //
+
+.service-in-list-2 {
+  width: 100%;
+  margin-bottom: 35px;
+  padding-top: 35px;
+  display: inline-block;
+  border-top: 1px solid $govuk-border-colour;
+}
+.service-left {
+  float: left;
+  width: 54%;
+  display: inline-block;
+}
+
+
+
+.service-right {
+  float: right;
+  width: 34%;
+  text-align: left;
+}
+
+// end cleanup //
+
+
 .service-links-1 {
   float: left;
-  margin-top: -10px;
   margin-left: 17px;
   width: 350px;
   display: inline-block;
