--- a/app/views/build-services-list-2.html
+++ b/app/views/build-services-list-2.html
@@ -70,7 +70,7 @@
 </div>
 
 <div class="add-a-service">
-<p class="govuk-body-s">
+<p class="govuk-body-m">
 <a href="#">+ Add a new service</a>
 </p>
 </div>
