--- a/app/views/build-services-list.html
+++ b/app/views/build-services-list.html
@@ -16,7 +16,7 @@
 
             <div class="nav-level-2-item">
               <p>
-              <a href="#">All live transactions</a>
+              <a href="transactions-placeholder-2">All live transactions</a>
               </p>
             </div>
 
