--- a/app/views/layout.html
+++ b/app/views/layout.html
@@ -49,7 +49,7 @@
     navigation: [
       {
         href: "#1",
-        text: "Services",
+        text: "All services",
         active: true
       },
       {
