--- a/app/views/index.html
+++ b/app/views/index.html
@@ -23,6 +23,10 @@
         <li><a href="build-services-list-2">Services list page</a></li>
       </ol>
 
+      <h2 class="govuk-heading-m">[placeholder] pages</h2>
+      <ol class="govuk-list govuk-list--number">
+        <li><a href="transactions-placeholder-2">All live transactions</a></li>
+      </ol>
       <h2 class="govuk-heading-m">[experimental] pages <a href="https://www.figma.com/file/cNdZ8GCt6ISHr1cqjdha4f/Pay-flows?node-id=678%3A0">figma link</a></h2>
       <ol class="govuk-list govuk-list--number">
         <li><a href="services-list">Services list page (4 services)</a></li>
