--- a/app/views/build-services-list-2.html
+++ b/app/views/build-services-list-2.html
@@ -29,11 +29,11 @@
 
   <div class="govuk-grid-row">
     <div class="govuk-grid-column-two-thirds">
-      <!--
+
       <h2 class="govuk-heading-l">
-        Services (3)
+        All services
       </h2>
-      -->
+
 
 
 
