tidy up prototype index

--- a/app/views/index.html
+++ b/app/views/index.html
@@ -13,23 +13,26 @@
         GOV.UK Pay</h1>
 
       <p>
-      Usability improvements to the services list page, adding a new service and the dashboard.
+      Usability improvements to the services list page and navigation.
       </p>
 
-      <p>Updated: 17 September 2020</p>
+      <p>Updated: 28 September 2020</p>
+
+
 
       <h2 class="govuk-heading-m">[build] pages</h2>
       <ol class="govuk-list govuk-list--number">
         <li><a href="build-services-list-2">Services list page</a></li>
       </ol>
 
-      <h2 class="govuk-heading-m">[placeholder] pages</h2>
+      <h2 class="govuk-heading-m">[figma] not prototyped yet</h2>
       <ol class="govuk-list govuk-list--number">
-        <li><a href="transactions-placeholder-2">All live transactions</a></li>
+        <li><a href="https://www.figma.com/file/cNdZ8GCt6ISHr1cqjdha4f/Pay-flows?node-id=307%3A0">Test / live views + switching</a> Figma</li>
       </ol>
-      <h2 class="govuk-heading-m">[experimental] pages <a href="https://www.figma.com/file/cNdZ8GCt6ISHr1cqjdha4f/Pay-flows?node-id=678%3A0">figma link</a></h2>
+
+      <h2 class="govuk-heading-m">[experimental] pages</h2>
       <ol class="govuk-list govuk-list--number">
-        <li><a href="services-list">Services list page (4 services)</a></li>
+        <li><a href="build-services-list-exp">Services list page</a></li>
         <li><a href="manage-service-settings">Manage service settings</a></li>
         <li><a href="fishing-licence">Dashboard for a service (first time use)</a></li>
       </ol>
